<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#780081"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/logo2"
        android:layout_marginTop="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/vert"
        android:layout_width="2dp"
        android:layout_height="30dp"
        android:background="#E27CD8"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo"/>

    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accedi"
        android:textColor="@color/white"
        android:textSize="24dp"
        android:layout_marginRight="40dp"
        app:layout_constraintTop_toTopOf="@id/vert"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintEnd_toStartOf="@id/vert"/>

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registrati"
        android:textColor="@color/white"
        android:textSize="24dp"
        android:textStyle="bold"
        android:layout_marginLeft="30dp"
        app:layout_constraintStart_toEndOf="@id/vert"
        app:layout_constraintTop_toTopOf="@id/vert"
        app:layout_constraintTop_toBottomOf="@id/logo"/>

    <View
        android:id="@+id/oriz"
        android:layout_width="320dp"
        android:layout_height="1dp"
        android:background="#E27CD8"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vert"/>

    <EditText
        android:id="@+id/nome"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/rounded_button"
        android:layout_marginTop="40dp"
        android:hint="@string/nome_e_cognome"
        android:textColor="@color/black"
        android:textColorHint="@color/hint"
        android:paddingHorizontal="10dp"
        android:layout_marginHorizontal="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/oriz" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/rounded_button"
        android:layout_marginTop="20dp"
        android:hint="@string/username"
        android:textColor="@color/black"
        android:textColorHint="@color/hint"
        android:paddingHorizontal="10dp"
        android:layout_marginHorizontal="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nome" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/rounded_button"
        android:layout_marginTop="20dp"
        android:hint="@string/email"
        android:textColor="@color/black"
        android:textColorHint="@color/hint"
        android:paddingHorizontal="10dp"
        android:layout_marginHorizontal="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/rounded_button"
        android:layout_marginTop="20dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="@color/hint"
        android:paddingHorizontal="10dp"
        android:layout_marginHorizontal="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <TextView
        android:id="@+id/skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/skip"
        android:textColor="#E27CD8"
        android:textSize="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/send"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button"
        app:backgroundTint="#E27CD8"
        android:text="@string/invia"
        android:textColor="@color/white"
        android:textSize="24dp"
        android:textAlignment="center"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toTopOf="@+id/skip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>