<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#780081"
    android:clickable="true"
    android:focusableInTouchMode="true"
    tools:context=".PageActivity">

    <LinearLayout
        android:id="@+id/shop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:paddingHorizontal="10dp"
        android:background="@drawable/rounded_money"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="+"
            android:textSize="24dp"
            android:clickable="true"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1000"
            android:textSize="20dp"
            android:layout_marginHorizontal="5dp"
            android:textColor="@color/white" />

        <ImageView
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_marginVertical="5dp"
            android:src="@drawable/_671120119165"/>

    </LinearLayout>

    <ImageButton
        android:id="@+id/account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/ic_baseline_person_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/faq"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/_671117952194__1_"
        app:layout_constraintBottom_toBottomOf="@+id/account"
        app:layout_constraintEnd_toStartOf="@id/account"
        app:layout_constraintTop_toTopOf="@+id/account" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/logo2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/account" />

    <TextView
        android:id="@+id/info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/page_info"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="#E27CD8"
        android:textAlignment="center"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/answer"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:backgroundTint="@color/white"
        android:hint="@string/domanda"
        android:text=""
        android:singleLine="true"
        android:maxLines="1"
        android:textColor="@color/white"
        android:textColorHint="@color/hint"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="50dp"
        android:paddingHorizontal="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info" />

    <EditText
        android:id="@+id/firstName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:backgroundTint="@color/white"
        android:hint="@string/nome"
        android:text=""
        android:singleLine="true"
        android:maxLines="1"
        android:textColor="@color/white"
        android:textColorHint="@color/hint"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="50dp"
        android:paddingHorizontal="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answer" />

    <EditText
        android:id="@+id/lastName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:backgroundTint="@color/white"
        android:hint="@string/cognome"
        android:text=""
        android:singleLine="true"
        android:maxLines="1"
        android:textColor="@color/white"
        android:textColorHint="@color/hint"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="50dp"
        android:paddingHorizontal="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstName" />

    <EditText
        android:id="@+id/bornPlace"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:backgroundTint="@color/white"
        android:hint="@string/luogo_di_nascita"
        android:text=""
        android:singleLine="true"
        android:maxLines="1"
        android:textColor="@color/white"
        android:textColorHint="@color/hint"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="50dp"
        android:paddingHorizontal="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastName" />

    <Button
        android:id="@+id/sender"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/invia"
        android:textColor="@color/white"
        app:backgroundTint="@null"
        android:background="@drawable/rounded_button_border"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="50dp"
        android:layout_marginHorizontal="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>