<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#780081"
    android:clickable="true"
    android:focusableInTouchMode="true"
    tools:context=".ProfileActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="30dp">

            <LinearLayout
                android:id="@+id/shop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="10dp"
                android:paddingHorizontal="10dp"
                android:background="@drawable/rounded_money"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="+"
                    android:textSize="24dp"
                    android:clickable="true"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1000"
                    android:textSize="20dp"
                    android:layout_marginHorizontal="5dp"
                    android:textColor="@color/white" />

                <ImageView
                    android:layout_width="26dp"
                    android:layout_height="26dp"
                    android:layout_marginVertical="5dp"
                    android:src="@drawable/_671120119165"/>

            </LinearLayout>

            <ImageButton
                android:id="@+id/account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/ic_baseline_person_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/faq"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/_671117952194__1_"
                app:layout_constraintBottom_toBottomOf="@+id/account"
                app:layout_constraintEnd_toStartOf="@id/account"
                app:layout_constraintTop_toTopOf="@+id/account" />

            <ImageButton
                android:id="@+id/backArrow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginLeft="20dp"
                android:background="@drawable/ic_baseline_arrow_back_ios_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/faq" />

            <ImageButton
                android:id="@+id/backArrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginLeft="27dp"
                android:background="@drawable/ic_baseline_arrow_back_ios_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/faq" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:src="@drawable/utente"
                app:layout_constraintBottom_toBottomOf="@+id/backArrow"
                app:layout_constraintTop_toTopOf="@id/backArrow" />

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="NickMarti00"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="26dp"
                android:textStyle="bold"
                android:layout_marginTop="30dp"
                app:layout_constraintTop_toBottomOf="@+id/imageView2" />

            <Button
                android:id="@+id/edit"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginHorizontal="90dp"
                android:background="@drawable/rounded_shop"
                android:text="@string/edit"
                android:textColor="@color/white"
                android:textSize="14dp"
                android:layout_marginTop="30dp"
                app:backgroundTint="@null"
                app:layout_constraintTop_toBottomOf="@id/name" />

            <ImageView
                android:id="@+id/notify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/campanello"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="50dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edit" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/notifiche"
                android:textColor="@color/white"
                android:textSize="18dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/notify"
                app:layout_constraintStart_toEndOf="@id/notify"
                app:layout_constraintTop_toTopOf="@id/notify" />

            <View
                android:id="@+id/oriz"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#E27CD8"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="40dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/notify"/>

            <TextView
                android:id="@+id/receiveNotify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ricevi_notifiche"
                android:textColor="@color/white"
                android:textSize="18dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/oriz"
                app:layout_constraintStart_toStartOf="parent"/>

            <Switch
                android:id="@+id/container1"
                android:layout_width="50dp"
                android:layout_height="20dp"
                android:background="@drawable/rounded_button"
                android:backgroundTint="#3E0B81"
                android:layout_marginRight="40dp"
                app:layout_constraintBottom_toBottomOf="@+id/receiveNotify"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/receiveNotify"
                tools:ignore="UseSwitchCompatOrMaterialXml" />


            <TextView
                android:id="@+id/newsletter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/iscrizione_alla_newsletter"
                android:textColor="@color/white"
                android:textSize="18dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/receiveNotify"
                app:layout_constraintStart_toStartOf="parent"/>

            <Switch
                android:id="@+id/container2"
                android:layout_width="50dp"
                android:layout_height="20dp"
                android:background="@drawable/rounded_button"
                android:backgroundTint="#6F6D72"
                android:layout_marginRight="40dp"
                android:checked="true"
                app:layout_constraintBottom_toBottomOf="@+id/newsletter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/newsletter"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

            <ImageView
                android:id="@+id/payment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/carta"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="50dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/newsletter" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pagamenti"
                android:textColor="@color/white"
                android:layout_marginLeft="10dp"
                android:textSize="18dp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="@id/payment"
                app:layout_constraintBottom_toBottomOf="@id/payment"
                app:layout_constraintStart_toEndOf="@id/payment"/>

            <View
                android:id="@+id/oriz1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#E27CD8"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="40dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/payment"/>

            <TextView
                android:id="@+id/methodChange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cambia_metodo_di_pagamento"
                android:textColor="@color/white"
                android:textSize="18dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/oriz1"
                app:layout_constraintStart_toStartOf="parent"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:rotation="180"
                android:layout_marginRight="40dp"
                android:src="@drawable/ic_baseline_arrow_back_ios_24"
                app:layout_constraintBottom_toBottomOf="@+id/methodChange"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/methodChange" />

            <TextView
                android:id="@+id/saldo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saldo"
                android:textColor="@color/white"
                android:textSize="18dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/methodChange"
                app:layout_constraintStart_toStartOf="parent"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:rotation="180"
                android:layout_marginRight="40dp"
                android:src="@drawable/ic_baseline_arrow_back_ios_24"
                app:layout_constraintBottom_toBottomOf="@+id/saldo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/saldo" />

            <TextView
                android:id="@+id/assistence"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/richiedi_assistenza"
                android:textColor="@color/white"
                android:textSize="18dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/saldo"
                app:layout_constraintStart_toStartOf="parent"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:rotation="180"
                android:layout_marginRight="40dp"
                android:src="@drawable/ic_baseline_arrow_back_ios_24"
                app:layout_constraintBottom_toBottomOf="@+id/assistence"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/assistence" />

            <TextView
                android:id="@+id/exit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/esci"
                android:layout_marginTop="50dp"
                android:textColor="#f00"
                android:textSize="26dp"
                app:layout_constraintTop_toBottomOf="@id/assistence"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</FrameLayout>